fix: spacing on final step between success text and finish button

--- a/src/containers/flows/AcceptBid/components/Details/Details.module.scss
+++ b/src/containers/flows/AcceptBid/components/Details/Details.module.scss
@@ -17,7 +17,7 @@
 .Buttons {
 	display: flex;
 	justify-content: center;
-	margin-top: 40px;
+	margin-top: 20px;
 }
 
 .Buttons > button:not(:first-child) {
